Fix image overflow on posts and update content on About page

--- a/src/wwwroot/css/main.css
+++ b/src/wwwroot/css/main.css
@@ -133,6 +133,86 @@
 	}
 }
 
+@layer utilities {
+	.with-border-top {
+		margin-top: 1rem;
+		border-top: 1px solid var(--color-text-10);
+		padding-top: 1rem;
+	}
+
+	.color-text-65 {
+		color: var(--color-text-65);
+	}
+
+	.color-text-80 {
+		color: var(--color-text-80);
+	}
+
+	.color-accent-100 {
+		color: var(--color-accent-100);
+	}
+
+	.flex-space {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.max-width-70ch {
+		max-width: 70ch;
+	}
+
+	.max-width-90ch {
+		max-width: 90ch;
+	}
+
+	.margin-top-1 {
+		margin-top: 1rem;
+	}
+
+	.margin-top-2 {
+		margin-top: 2rem;
+	}
+
+	.margin-top-4 {
+		margin-top: 4rem;
+	}
+
+	.margin-top-6 {
+		margin-top: 6rem;
+	}
+
+	.flow-1 * + * {
+		margin-top: 1rem;
+	}
+
+	.bold {
+		font-weight: 500;
+	}
+
+	.italic {
+		font-style: italic;
+	}
+
+	.ellipsis {
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+	}
+
+	.three-lines {
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	.three-lines {
+		-webkit-line-clamp: 3;
+		line-clamp: 3;
+	}
+}
+
 @layer layout {
 	@layer content-grid {
 		.content-grid {
@@ -424,10 +504,13 @@
 			gap: 1rem;
 		}
 
-		.post-image {
+		.post-image-wrapper {
 			max-height: 650px;
 
 			img {
+				--object-position: center;
+				object-position: var(--object-position);
+
 				height: 100%;
 				width: 100%;
 				object-fit: cover;
@@ -494,85 +577,5 @@
 				display: inline-block;
 			}
 		}
-	}
-}
-
-@layer utilities {
-	.with-border-top {
-		margin-top: 1rem;
-		border-top: 1px solid var(--color-text-10);
-		padding-top: 1rem;
-	}
-
-	.color-text-65 {
-		color: var(--color-text-65);
-	}
-
-	.color-text-80 {
-		color: var(--color-text-80);
-	}
-
-	.color-accent-100 {
-		color: var(--color-accent-100);
-	}
-
-	.flex-space {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	.max-width-70ch {
-		max-width: 70ch;
-	}
-
-	.max-width-90ch {
-		max-width: 90ch;
-	}
-
-	.margin-top-1 {
-		margin-top: 1rem;
-	}
-
-	.margin-top-2 {
-		margin-top: 2rem;
-	}
-
-	.margin-top-4 {
-		margin-top: 4rem;
-	}
-
-	.margin-top-6 {
-		margin-top: 6rem;
-	}
-
-	.flow-1 * + * {
-		margin-top: 1rem;
-	}
-
-	.bold {
-		font-weight: 500;
-	}
-
-	.italic {
-		font-style: italic;
-	}
-
-	.ellipsis {
-		overflow: hidden;
-		white-space: nowrap;
-		text-overflow: ellipsis;
-	}
-
-	.three-lines {
-		display: -webkit-box;
-		-webkit-box-orient: vertical;
-		overflow: hidden;
-		text-overflow: ellipsis;
-	}
-
-	.three-lines {
-		-webkit-line-clamp: 3;
-		line-clamp: 3;
 	}
 }
